# TermOpen

./: .gitignore  AGENTS.MD  CLAUDE.md  README.md  auth-servers.json  package-lock.json  package.json  servers.json  tailwind.config.ts
docs/: AGENT_APP.md  AGENT_ARCHITECTURE.md  AGENT_DEEPLINK.md
server/: .env.example  package.json  wrangler.toml
server/src/: index.js
src/: App.tsx  constants.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  key_actions.rs  keyboard.rs  lib.rs  main.rs  models.rs  mouse.rs  protocol_stream.rs  rdp.rs  remote_fs.rs  ssh.rs  sync.rs  vault.rs
src-tauri/src/commands/: auth.rs  debug_logs.rs  local_fs.rs  mod.rs  rdp.rs  remote_fs.rs  settings.rs  sftp.rs  ssh.rs  sync.rs  vault.rs  window.rs
src-tauri/src/deeplink/: mod.rs  windows.rs
src-tauri/src/libs/: key_actions.rs  mod.rs  models.rs  remote_fs.rs  shared_fs.rs  sync.rs  task.rs  transfer.rs  vault.rs
src-tauri/src/protocols/: ftp.rs  mod.rs  rdp.rs  sftp.rs  smb.rs  ssh.rs
src-tauri/src/tests/: auth_test.rs  mod.rs  models_test.rs  models_tests.rs  shared_fs_test.rs  task_test.rs  transfer_test.rs  vault_export_test.rs
src-tauri/tests/: README.md
src/components/: connection-card.tsx  connection-detail-dialog.tsx  import-key-dialog.tsx
src/components/drawers/: host-form-drawer.tsx  keychain-form-drawer.tsx
src/components/layout/: app-header.tsx  app-sidebar.tsx  work-tabs.tsx
src/components/ui/: alert-dialog.tsx  app-dialog.tsx  app-drawer.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  dialog.tsx  drawer.tsx  input.tsx  sheet.tsx  sidebar.tsx  switch.tsx  textarea.tsx  tooltip.tsx  window-overlay.ts
src/components/workspace/: workspace-block-controller.tsx
src/functions/: backend-message.ts  common.ts  connection-actions.ts  editor-file-utils.ts  session-actions.ts  sftp-editor-actions.ts  store-types.ts  vault-actions.ts
src/langs/: index.ts  pt_BR.ts  types.ts
src/langs/en_US/: about.ts  app.ts  backend-messages.ts  common.ts  conflicts.ts  debug-logs.ts  editor.ts  home.ts  host-drawer.ts  index.ts  keychain.ts  known-hosts.ts  settings.ts  toasts.ts  vault.ts  workspace.ts
src/langs/pt_BR/: about.ts  app.ts  backend-messages.ts  common.ts  conflicts.ts  debug-logs.ts  editor.ts  home.ts  host-drawer.ts  index.ts  keychain.ts  known-hosts.ts  settings.ts  toasts.ts  vault.ts  workspace.ts
src/lib/: backend-socket.ts  debug-logs.ts  tauri.ts
src/pages/: vault-gate-page.tsx
src/pages/sections/: about-page.tsx  debug-logs-page.tsx  home-page.tsx  hosts-page.tsx  keychain-page.tsx  known-hosts-page.tsx  settings-page.tsx  sftp-section-page.tsx
src/pages/sections/settings/: option-dropdown.tsx  settings-panel.tsx  settings-row.tsx  types.ts
src/pages/tabs/: editor-tab-page.tsx  rdp-workspace-tab-page.tsx  sftp-workspace-tab-page.tsx  workspace-tab-page.tsx
src/pages/tabs/workspace/: block-module.ts  editor.tsx  logs.tsx  rdp.tsx  sftp.tsx  terminal.tsx  types.ts
src/pages/tabs/workspace/natives/: layout.tsx  paths.tsx  rdp-stream.ts  runtime.tsx  source-io.tsx
src/schemas/: host.ts  import-key.ts  index.ts  keychain.ts  settings.ts  vault.ts  workspace.ts
src/store/: app-store.ts  app-store.types.ts
src/types/: app-state.ts  lz4js.d.ts  openptl.ts  termopen.ts  workspace.ts
