[package]
name = "termopen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termopen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
directories = "6"
keyring = "2.3"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
ssh2 = "0.9"
suppaftp = { version = "8.0.2", features = ["native-tls"] }
smb = "0.11.1"
futures-util = "0.3"
ironrdp = { version = "0.14.0", features = ["connector", "session", "graphics", "core"] }
ironrdp-blocking = "0.8.0"
ironrdp-graphics = "0.7.0"
ironrdp-pdu = "0.7.0"
lz4_flex = "0.11.5"
sspi = { version = "0.18.7", features = ["network_client"] }
tempfile = "3"
tokio = { version = "1", features = ["time", "net", "io-util", "macros"] }
tokio-rustls = "0.26.4"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
x509-cert = { version = "0.2", default-features = false, features = ["std"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
